RESOLVED FIXED44987
Regression (r63528): HTTP headers not being set correctly for FrameLoadTypeReloadFromOrigin
https://bugs.webkit.org/show_bug.cgi?id=44987
Summary Regression (r63528): HTTP headers not being set correctly for FrameLoadTypeRe...
Nate Chapin
Reported 2010-08-31 14:20:58 PDT
Currently, the cache policy is being set correctly for subresources when the FrameLoader's load type is FrameLoadTypeReloadFromOrigin, but the additional headers (Cache-Control, Pragma) are not being correctly set.
Attachments
patch (2.46 KB, patch)
2010-08-31 14:23 PDT, Nate Chapin
fishd: review+
Nate Chapin
Comment 1 2010-08-31 14:23:07 PDT
Darin Adler
Comment 2 2010-08-31 14:58:06 PDT
Comment on attachment 66105 [details] patch Can we add a regression test for this?
Nate Chapin
Comment 3 2010-08-31 14:59:33 PDT
(In reply to comment #2) > (From update of attachment 66105 [details]) > Can we add a regression test for this? I'm happy to add a test, I just wasn't sure what kind was preferred, since DRT doesn't seem to be able to test this case. Manual test perhaps?
Darin Fisher (:fishd, Google)
Comment 4 2010-08-31 15:05:58 PDT
Comment on attachment 66105 [details] patch We could probably extend layoutTestController to add a queueReloadFromOrigin method. I think it is fair to create a separate patch for that since it involves new DRT functionality.
Nate Chapin
Comment 5 2010-08-31 15:52:02 PDT
(In reply to comment #4) > (From update of attachment 66105 [details]) > We could probably extend layoutTestController to add a queueReloadFromOrigin method. > I think it is fair to create a separate patch for that since it involves new DRT > functionality. Filed and assigned to me: https://bugs.webkit.org/show_bug.cgi?id=44999
Nate Chapin
Comment 6 2010-08-31 16:08:22 PDT
(In reply to comment #5) > (In reply to comment #4) > > (From update of attachment 66105 [details] [details]) > > We could probably extend layoutTestController to add a queueReloadFromOrigin method. > > I think it is fair to create a separate patch for that since it involves new DRT > > functionality. > > Filed and assigned to me: https://bugs.webkit.org/show_bug.cgi?id=44999 http://trac.webkit.org/changeset/66549
Note You need to log in before you can comment on or make changes to this bug.