2010-08-31  Nate Chapin  <japhet@chromium.org>

Reviewed by Darin Fisher.

        Regression in r63528: Custom http headers for loads of type
        FrameLoadTypeReloadFromOrigin are not being correctly
        propagated to subresource loads.

        https://bugs.webkit.org/show_bug.cgi?id=44987

        No tests, since DRT doesn't seem to have a way to trigger a
        FrameLoadTypeReloadFromOrigin load.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::addExtraFieldsToRequest):



Canonical link: https://commits.webkit.org/57309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66549 268f45cc-cd09-0410-ab3c-d52691b4dbfc